# gstreamer-example

./: .gitignore  .gitmodules  CMakeLists.txt  Debug.md  Dockerfile.Debian12  Dockerfile.Fedora40  Makefile  README.md  compose.yml  custom_agent.c  custom_agent.h  index.html  main.css  receiver.html  rpm.spec  script.js  style.css  transceiver.html  webrtc-common.c  webrtc-common.h  webrtc-recvonly-h264.c  webrtc-sendrecv.c  webrtc-soup.c  webrtc-unidirectional-h264.c
RTPStreaming/: CMakeLists.txt  main.cpp
RTPStreaming/receiver/: CMakeLists.txt  receiver.cpp
RTPStreaming/sender/: CMakeLists.txt  sender.cpp
SRPMS/: gstreamer-example-1.0-1.src.rpm
build-container/: Dockerfile.Debian12  Dockerfile.Fedora40
debian/: .gitignore  changelog  control  copyright  rules
example/gst/: .clang-format  Makefile  webrtc-sendrecv
example/js/: index.html  webrtc.js
gst/: .clang-format  Dockerfile  Makefile  webrtc-sendrecv.c
java-sendrecv/: Dockerfile  pom.xml
java-sendrecv/gst-inspect-1.0/: av1enc  avfvideosrc  rav1enc  svtav1enc  vp8enc  vp9enc  vtenc_h264  vtenc_h264_hw  vtenc_h265  vtenc_h265_hw  webrtcbin
java-sendrecv/src/: WebRTCSendRecv.java
signaling/: Dockerfile  server.py
src/: CMakeLists.txt
src/receiver/: CMakeLists.txt  sender.cpp
src/sender/: receiver.cpp
web/: index.html  index2.html  style.css
